<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddChildLedgerItem"
    android:layout_margin="@dimen/child_ledger_padding">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_ledger_item_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/stat_sys_upload" />

    <TextView
        android:id="@+id/ledger_item_description_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/Ledger_item_description_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/ledger_item_description_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autoSizeMaxTextSize="@dimen/ledger_item_desc_max_text_size"
        android:hint="@string/enter_decription_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ledger_item_description_label_tv" />

    <TextView
        android:id="@+id/direction_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/direction"
        app:layout_constraintBottom_toBottomOf="@+id/direction_switch"
        app:layout_constraintEnd_toStartOf="@+id/direction_switch"
        app:layout_constraintTop_toTopOf="@+id/direction_switch" />

    <Switch
        android:textColor="@color/green"
        android:textSize="@dimen/symbol_size_text_direction"
        android:checked="true"
        android:id="@+id/direction_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction_plus"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/value_level_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="8dp"
        android:text="@string/value_level"
        app:layout_constraintBottom_toBottomOf="@+id/enter_value_of_transaction_et"
        app:layout_constraintEnd_toStartOf="@+id/currency_label"
        app:layout_constraintTop_toTopOf="@+id/enter_value_of_transaction_et" />

    <TextView
        android:id="@+id/currency_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency"
        app:layout_constraintBottom_toBottomOf="@+id/enter_value_of_transaction_et"
        app:layout_constraintEnd_toStartOf="@+id/enter_value_of_transaction_et"
        app:layout_constraintTop_toTopOf="@+id/enter_value_of_transaction_et" />

    <com.google.android.material.textfield.TextInputEditText
        android:hint="@string/zero"
        android:id="@+id/enter_value_of_transaction_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ledger_item_description_tv" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_value_of_transaction_et">

        <TextView
            android:id="@+id/enter_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="Enter Date" />

        <TextView
            android:hint="@string/tap_to_enter_date"
            android:text=""
            android:onClick="showDatePickerDialog"
            android:id="@+id/add_ledger_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:fadingEdge="horizontal|vertical"
            android:padding="8dp"
            android:typeface="serif" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/enter_value_of_transaction_et"
        app:layout_constraintStart_toStartOf="@+id/currency_label"
        app:layout_constraintTop_toBottomOf="@+id/ledger_item_description_tv">

        <Spinner
            android:id="@+id/spinner_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/spinner_for_time_hours"
            android:textAlignment="viewEnd" />

        <TextView

            android:id="@+id/hours_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/h" />

        <Spinner

            android:id="@+id/spinner_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/spinner_for_time_minutes"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/minutes_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/min" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>